feat: Add Taillwind

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
 <h1>Test</h1>
 <mat-slide-toggle>Toggle me!</mat-slide-toggle>
+<hr>
+<p class="bg-primary">Test message</p>
+<hr>
+<div class="mt-2 bg-accent w-1/2 card rounded-none">
+  <!-- ... -->
+  Test Card
+</div>
