--- a/src/app/components/users/createuser/createuser.component.html
+++ b/src/app/components/users/createuser/createuser.component.html
@@ -1,1 +1,33 @@
-<p>createuser works!</p>
+<!--<div class="wrapper">-->
+<!--  <h1>User Details</h1>-->
+<!--  <hr>-->
+<!--  <form [formGroup]="createUserForm" class="example-form text-center" (ngSubmit)="onCreate()">-->
+<!--    <div class="">-->
+<!--      <mat-form-field>-->
+<!--        <mat-label>First name</mat-label>-->
+<!--        <input formControlName="firstName" matInput placeholder="Khuong" name="firstName" required-->
+<!--               type="text">-->
+<!--      </mat-form-field>-->
+<!--      <mat-form-field>-->
+<!--        <mat-label>Last name</mat-label>-->
+<!--        <input formControlName="lastName" matInput placeholder="Khuong" name="lastName" required-->
+<!--               type="text">-->
+<!--      </mat-form-field>-->
+<!--    </div>-->
+<!--    <div>-->
+<!--      <mat-form-field class="w-full">-->
+<!--        <mat-label>Email</mat-label>-->
+<!--        <input formControlName="email" matInput placeholder="abc@gmail.com" name="email" required="true"-->
+<!--               type="email"-->
+<!--        >-->
+<!--        <mat-error *ngIf="createUserForm.controls.email.touched && createUserForm.controls.email.hasError('required')">-->
+<!--          Email is required!!!-->
+<!--        </mat-error>-->
+<!--      </mat-form-field>-->
+
+<!--    </div>-->
+
+<!--  </form>-->
+
+<!--</div>-->
+<p>create user works!</p>
