--- a/src/app/components/users/listuser/listuser.component.html
+++ b/src/app/components/users/listuser/listuser.component.html
@@ -1,1 +1,20 @@
-<p>listuser works!</p>
+<h1 style="font-size: 50px">User List: </h1>
+<button mat-raised-button color="primary" [routerLink]="['create']">Create</button>
+<ul style="font-size: 30px">
+  <li>
+    <button mat-button href="mat" routerLink="1">
+      User 1
+    </button>
+  </li>
+  <li>
+    <button mat-button href="" routerLink="2">
+      User 2
+    </button>
+  </li>
+  <li>
+    <button mat-button href="" routerLink="3">
+      User 3
+    </button>
+  </li>
+
+</ul>
