--- a/src/app/components/users/listuser/listuser.component.html
+++ b/src/app/components/users/listuser/listuser.component.html
@@ -1,5 +1,8 @@
-<h1 style="font-size: 50px">User List: </h1>
-<button mat-raised-button color="primary" [routerLink]="['create']">Create</button>
+<div class="header">
+  <h1 style="font-size: 50px" class="font-bold">Users</h1>
+  <button mat-raised-button color="primary" [routerLink]="['create']">Create</button>
+</div>
+
 <ul style="font-size: 30px">
   <li>
     <button mat-button href="mat" routerLink="1">
