--- a/src/app/components/users/create-user/create-user.component.html
+++ b/src/app/components/users/create-user/create-user.component.html
@@ -1,33 +1,59 @@
-<!--<div class="wrapper">-->
-<!--  <h1>User Details</h1>-->
-<!--  <hr>-->
-<!--  <form [formGroup]="createUserForm" class="example-form text-center" (ngSubmit)="onCreate()">-->
-<!--    <div class="">-->
-<!--      <mat-form-field>-->
-<!--        <mat-label>First name</mat-label>-->
-<!--        <input formControlName="firstName" matInput placeholder="Khuong" name="firstName" required-->
-<!--               type="text">-->
-<!--      </mat-form-field>-->
-<!--      <mat-form-field>-->
-<!--        <mat-label>Last name</mat-label>-->
-<!--        <input formControlName="lastName" matInput placeholder="Khuong" name="lastName" required-->
-<!--               type="text">-->
-<!--      </mat-form-field>-->
-<!--    </div>-->
-<!--    <div>-->
-<!--      <mat-form-field class="w-full">-->
-<!--        <mat-label>Email</mat-label>-->
-<!--        <input formControlName="email" matInput placeholder="abc@gmail.com" name="email" required="true"-->
-<!--               type="email"-->
-<!--        >-->
-<!--        <mat-error *ngIf="createUserForm.controls.email.touched && createUserForm.controls.email.hasError('required')">-->
-<!--          Email is required!!!-->
-<!--        </mat-error>-->
-<!--      </mat-form-field>-->
+<div class="wrapper p-4">
+  <h1 class="font-bold text-5xl m-3 ">Create User</h1>
+  <hr>
+  <form [formGroup]="createUserForm" class="example-form text-center" (ngSubmit)="onCreate()">
+    <div class="line1 w-full">
+      <mat-form-field class=" p-2 w-1/2 float-left">
+        <mat-label>First name</mat-label>
+        <input formControlName="firstName" matInput placeholder="Khuong" name="firstName" required
+               type="text">
+        <mat-error>First name is required!!</mat-error>
+      </mat-form-field>
 
-<!--    </div>-->
 
-<!--  </form>-->
+      <mat-form-field class="p-2 w-1/2 float-right">
+        <mat-label>Last name</mat-label>
+        <input formControlName="lastName" matInput placeholder="Khuong" name="lastName" required
+               type="text">
+        <mat-error>Last name is required!!</mat-error>
+      </mat-form-field>
 
-<!--</div>-->
-<p>create user works!</p>
+    </div>
+
+    <div class="line2">
+      <mat-form-field class="w-1/2 p-2">
+        <mat-label>Email</mat-label>
+        <input formControlName="email" matInput placeholder="abc@gmail.com" name="email" required="true"
+               type="email">
+        <mat-error
+          *ngIf="createUserForm.controls['email'].touched && createUserForm.controls['email'].hasError('required')">
+          Email is required!!!
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field class="w-1/2 p-2">
+        <mat-label>Password</mat-label>
+        <input type="password" formControlName="password" matInput required name="password">
+        <mat-error>Password is required!!</mat-error>
+      </mat-form-field>
+
+    </div>
+    <div class="line2">
+      <mat-form-field class="w-1/2 p-2">
+        <mat-label>Phone number</mat-label>
+        <input formControlName="phoneNum" matInput placeholder="0988000548" name="phone" required="true"
+               type="text">
+        <mat-error>
+          Phone number is required!!!
+        </mat-error>
+      </mat-form-field>
+
+      <mat-checkbox formControlName="status" class="w-1/2 p-2">Active</mat-checkbox>
+
+
+    </div>
+
+  </form>
+
+</div>
+
+
