--- a/src/app/components/users/create-user/create-user.component.html
+++ b/src/app/components/users/create-user/create-user.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper p-4">
+<div class="wrapper p-4 w-1/2">
   <h1 class="font-bold text-5xl m-3 ">Create User</h1>
   <hr>
   <form [formGroup]="createUserForm" class="example-form text-center" (ngSubmit)="onCreate()">
@@ -9,15 +9,12 @@
                type="text">
         <mat-error>First name is required!!</mat-error>
       </mat-form-field>
-
-
       <mat-form-field class="p-2 w-1/2 float-right">
         <mat-label>Last name</mat-label>
         <input formControlName="lastName" matInput placeholder="Khuong" name="lastName" required
                type="text">
         <mat-error>Last name is required!!</mat-error>
       </mat-form-field>
-
     </div>
 
     <div class="line2">
@@ -26,7 +23,7 @@
         <input formControlName="email" matInput placeholder="abc@gmail.com" name="email" required="true"
                type="email">
         <mat-error
-          *ngIf="createUserForm.controls['email'].touched && createUserForm.controls['email'].hasError('required')">
+         >
           Email is required!!!
         </mat-error>
       </mat-form-field>
@@ -46,10 +43,14 @@
           Phone number is required!!!
         </mat-error>
       </mat-form-field>
+      <div class="w-1/2 p-2 inline-block"><mat-checkbox class="float-left my-0" formControlName="status" >Active</mat-checkbox></div>
 
-      <mat-checkbox formControlName="status" class="w-1/2 p-2">Active</mat-checkbox>
 
 
+    </div>
+    <hr>
+    <div class="line3 mt-3">
+      <button mat-raised-button type="submit" color="primary" class="float-right">Create</button>
     </div>
 
   </form>
