--- a/src/app/components/users/create-user/create-user.component.html
+++ b/src/app/components/users/create-user/create-user.component.html
@@ -9,8 +9,6 @@
                type="text">
         <mat-error>First name is required!!</mat-error>
       </mat-form-field>
-
-
       <mat-form-field class="p-2 w-1/2 float-right">
         <mat-label>Last name</mat-label>
         <input formControlName="lastName" matInput placeholder="Khuong" name="lastName" required
@@ -32,16 +30,21 @@
       </mat-form-field>
       <mat-form-field class="w-1/2 p-2">
         <mat-label>Password</mat-label>
-        <input type="password" formControlName="password" matInput required name="password">
-        <mat-error>Password is required!!</mat-error>
+        <input pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z]).{8,}$" [type]="showPassword ? 'text' : 'password'"
+               formControlName="password" matInput required name="password">
+        <mat-icon matSuffix
+                  (click)="toggleShowPassword()">  {{showPassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+        <mat-error>Password is Invalid! Password must be a combination of lower-case, upper-case, numbers and at least 9
+          characters long
+        </mat-error>
       </mat-form-field>
 
     </div>
     <div class="line2">
       <mat-form-field class="w-1/2 p-2">
         <mat-label>Phone number</mat-label>
-        <input formControlName="phoneNum" matInput placeholder="0988000548" name="phone" required="true"
-               type="text">
+        <input formControlName="phoneNum" matInput placeholder="0988000548" min="12" name="phone" required="true"
+               type="number">
         <mat-error>
           Phone number is required!!!
         </mat-error>
@@ -49,10 +52,15 @@
 
       <mat-checkbox formControlName="status" class="w-1/2 p-2">Active</mat-checkbox>
 
-
     </div>
-
+    <hr>
+    <div class="line3">
+      <button mat-raised-button color="primary" class="float-right mt-3 mr-10" [disabled]="createUserForm.invalid">
+        Create
+      </button>
+    </div>
   </form>
+
 
 </div>
 
