--- a/src/app/components/users/create-user/create-user.component.html
+++ b/src/app/components/users/create-user/create-user.component.html
@@ -1,74 +1,6 @@
 <div class="wrapper p-4 w-1/2">
   <h1 class="font-bold text-5xl m-3 ">Create User</h1>
-  <hr>
-  <form [formGroup]="createUserForm" class="example-form text-center" (ngSubmit)="onCreate()">
-    <div class="line1 w-full">
-      <mat-form-field class=" p-2 w-1/2 float-left">
-        <mat-label>First name</mat-label>
-        <input formControlName="firstName" matInput placeholder="Khuong" name="firstName" required
-               type="text">
-        <mat-error>First name is required!!</mat-error>
-      </mat-form-field>
-      <mat-form-field class="p-2 w-1/2 float-right">
-        <mat-label>Last name</mat-label>
-        <input formControlName="lastName" matInput placeholder="Khuong" name="lastName" required
-               type="text">
-        <mat-error>Last name is required!!</mat-error>
-      </mat-form-field>
-    </div>
-
-    <div class="line2">
-      <mat-form-field class="w-1/2 p-2">
-        <mat-label>Email</mat-label>
-        <input formControlName="email" matInput placeholder="abc@gmail.com" name="email" required="true"
-               type="email">
-        <mat-error
-         >
-          Email is required!!!
-        </mat-error>
-      </mat-form-field>
-      <mat-form-field class="w-1/2 p-2">
-        <mat-label>Password</mat-label>
-        <input pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z]).{8,}$" [type]="showPassword ? 'text' : 'password'"
-               formControlName="password" matInput required name="password">
-        <mat-icon matSuffix
-                  (click)="toggleShowPassword()">  {{showPassword ? 'visibility_off' : 'visibility'}}</mat-icon>
-        <mat-error>Password is Invalid! Password must be a combination of lower-case, upper-case, numbers and at least 9
-          characters long
-        </mat-error>
-      </mat-form-field>
-
-    </div>
-    <div class="line2">
-      <mat-form-field class="w-1/2 p-2">
-        <mat-label>Phone number</mat-label>
-        <input formControlName="phoneNum" matInput placeholder="0988000548" min="12" name="phone" required="true"
-               type="number">
-        <mat-error>
-          Phone number is required!!!
-        </mat-error>
-      </mat-form-field>
-      <div class="w-1/2 p-2 inline-block"><mat-checkbox class="float-left my-0" formControlName="status" >Active</mat-checkbox></div>
-
-<<<<<<< HEAD
-=======
-
-
-    </div>
-    <hr>
-    <div class="line3 mt-3">
-      <button mat-raised-button type="submit" color="primary" class="float-right">Create</button>
->>>>>>> 7b4bacf16693a95fded826eda3a6f790b33c23c5
-    </div>
-    <hr>
-    <div class="line3">
-      <button mat-raised-button color="primary" class="float-right mt-3 mr-10" [disabled]="createUserForm.invalid">
-        Create
-      </button>
-    </div>
-  </form>
-
-
+  <app-form-template (onCreate)="onCreate($event)"></app-form-template>
 </div>
 
 
