--- a/src/app/components/users/list-user/list-user.component.html
+++ b/src/app/components/users/list-user/list-user.component.html
@@ -42,7 +42,7 @@
 
     <table class="full-width"
            mat-table
-           [dataSource]="users"
+           [dataSource]="dataSource"
            matSort matSortActive="id"
            matSortDisableClear>
       >
@@ -74,14 +74,14 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by created date"> Created date
         </th>
         <td mat-cell *matCellDef="let user">
-          {{user.createdDate}}
+          {{user.createdDate | date:'medium'}}
         </td>
       </ng-container>
       <ng-container matColumnDef="Updated date">
         <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by updated date">Updated date
         </th>
         <td mat-cell *matCellDef="let user">
-          {{user.updatedDate}}
+          {{user.updatedDate | date:'medium'}}
         </td>
       </ng-container>
 
@@ -111,9 +111,11 @@
 
     </table>
 
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-                   showFirstLastButtons
-                   aria-label="Select page of periodic elements">
+    <mat-paginator
+      #paginator
+      [pageSizeOptions]="[5, 10, 20]"
+      showFirstLastButtons
+      aria-label="Select page of periodic elements">
     </mat-paginator>
   </div>
 </div>
