--- a/src/app/components/users/list-user/list-user.component.html
+++ b/src/app/components/users/list-user/list-user.component.html
@@ -113,7 +113,11 @@
 
     <mat-paginator
       #paginator
-      [pageSizeOptions]="[5, 10, 20]"
+      [length]="totalRows"
+      [pageSizeOptions]="pageSizeOptions"
+      [pageSize] ="pageSize"
+      [pageIndex] = "currentPage"
+      (page)="onPageChanged($event)"
       showFirstLastButtons
       aria-label="Select page of periodic elements">
     </mat-paginator>
